# TFIC-baselines

./: AGENTS.md  README.md  calibration_utils.py  cmd_tmp  eval_ppl.py  flatquant.md  generate_awq_scales.py  lm_eval_dataset_smoke.py  lm_eval_runner.py  lm_eval_smoke.py  log_wandb_results.py  pyproject.toml  requirements.txt  run_all.sh  run_assignment_smokes.sh  run_awq_assignment_smoke_eval.sh  run_full_baselines.sh  run_quantization_baseline.py  runtime_utils.py  summary.md  tfiox.md  wandb_utils.py
.tmp/: extracted_hyperparams.txt
assignment_methods/: __init__.py  flexround.py  flexround_calibration.py  gptaq.py  gptaq_rescomp.py  gptq.py  qronus.py  rtn.py  state_adapter.py  stats.py  tfic.py
baseline_utils/: calibration.py  model_loading.py  runtime.py  wandb.py
docs/: README.md  summary.md
eigenflip/: eval_ppl.py  run_fast.py  smoke_tfic.py  validate_66.py  validate_flip.py  validate_solve.py  validate_tfic.py  validate_tfic_fast.py
experiments/: README.md
grid_baselines/: __init__.py  attention_runtime.py  awq_quantization_grid.py  flatquant_calibration.py  flatquant_model.py  flatquant_quantization_grid.py  flatquant_training.py  neuqi_quantization_grid.py  spinquant_calibration.py  spinquant_quantization_grid.py  spinquant_training.py  transformed_linear.py  vanilla_quantization_grid.py
misc/: calibration_utils.py  cmd  direction2_eigflip_crosseval.py  eval_ppl.py  headroom_d1.py
scripts/: calibrate_flatquant.py  calibrate_flexround.py  calibrate_spinquant.py  check_flatquant_parity.py  eval_ppl.py  generate_all_ckpts.sh  generate_awq_scales.py  lm_eval_dataset_smoke.py  lm_eval_runner.py  lm_eval_smoke.py  log_wandb_results.py  run_assignment_smokes.sh  run_awq_assignment_smoke_eval.sh  run_eigenflip_baselines.sh  run_full_baselines.sh  run_quantization_baseline.py  train_flatquant.py  train_spinquant.py
tasks/: flatquant_full_plan.md  spinquant_full_plan.md  task_1.md
(+63 files in other folders)
