[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfic-baselines"
version = "0.1.0"
description = "Quantization grid and assignment-method baselines for TFIC experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate",
  "datasets",
  "lm-eval",
  "numpy",
  "python-dotenv",
  "torch",
  "tqdm",
  "transformers",
  "wandb",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
eval-ppl = "scripts.eval_ppl:main"
generate-awq-scales = "scripts.generate_awq_scales:main"
train-flatquant = "scripts.train_flatquant:main"
check-flatquant-parity = "scripts.check_flatquant_parity:main"
lm-eval-smoke = "scripts.lm_eval_smoke:main"
log-wandb-results = "scripts.log_wandb_results:main"
quantize-baseline = "scripts.run_quantization_baseline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "assignment_methods*",
  "baseline_utils*",
  "eigenflip*",
  "grid_baselines*",
  "scripts*",
]

[tool.uv]
package = true
